fix(ui): ajustar el gap del dock

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -21,18 +21,24 @@ article h4 {
   margin: 1rem auto;
   gap: 2rem;
 }
+@media (max-width: 767px) {
+  .dock {
+    gap: 1.5rem;
+  }
+}
 .dock .dock__item {
   border: 0;
   margin: 0;
   padding: 1rem;
   background: var(--pico-card-background-color);
-  border-radius: 0;
   position: relative;
 }
 .dock .dock__item.is-active::after {
   content: '';
   display: block;
   position: absolute;
+  border-bottom-left-radius: var(--pico-border-radius);
+  border-bottom-right-radius: var(--pico-border-radius);
   left: 0;
   bottom: 0;
   width: 100%;
